Fix typo in naming fading image javascript file

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <script src="/js/btn-scroll-to-top.js"></script><!--  For scrolling to top button -->
   <script src="/js/card-transition.js"></script>
   <!-- For card in aside section. Darken effect (May use on other page card) -->
-  <script src="/js/fade-img.js"></script> <!-- For fading img effect at main section -->
+  <script src="/js/fade-images.js" ></script> <!-- For fading img effect at main section -->
   <script src="/js/home-slides.js"></script><!-- For managing the slides flow in big slideshow   -->
 </body>
 
