--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
     
         <!-- Navigation bar structure -->
         <nav id="navbar"> 
-            <a href="/index.html"" class="logo-club"> <!-- Add IIUM Aikido Club logo to navbar -->
+            <a href="/index.html" class="logo-club">IIUM Aikido Club</a> <!-- Add IIUM Aikido Club logo to navbar -->
                 <img src="img/crop-iium-aikido-logo.png" alt="Logo">
             </a>
             <h2 id="club-name">IIUM AIKIDO CLUB</h2> <!-- Add club name to navbar -->
@@ -56,7 +56,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="/eventgallery.html">Event & Activities</a></li>
                     <li><a href="/about-us.html">About Us</a></li>
-                    <li><img id="nav-image" src="img/nav-image.png" alt="navi image"></li> <!-- Add image to decorate the nav contaienr -->
+                    <li><img id="nav-image" src="img/nav-image.png" alt="navi"></li> <!-- Add image to decorate the nav contaienr -->
                 </ul>
             </div>
         </nav>
@@ -81,9 +81,9 @@
     <!-- Full Name -->
     <div class="input-field">
         <!-- Input field for full name -->
-        <label>Full Name</label>
+        <label for="full-name">Full Name</label>
         <!-- Label for full name input -->
-        <input type="text" placeholder="Enter your name" required>
+        <input type="text" id="full-name" placeholder="Enter your name" required>
         <!-- Text input for full name -->
     </div>
 
