--- a/join.html
+++ b/join.html
@@ -1,8 +1,9 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Attendance Form</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/htmx.org/dist/htmx.js"></script>
 </head>
 <body>
