--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
 <head>
     <!-- Meta tags for character set and responsive design -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Add favicons. Based on favicon website. Put icon at the browser tab -->
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_io/favicon-32x32.png">
