fix scroll-to-top button

--- a/mainboard.html
+++ b/mainboard.html
@@ -127,7 +127,7 @@
       </footer>
         
       <!-- Add scroll-to-top button -->
-      <button id="scrollToTop">&#x2B9D;</button>
+      <button id="scrollToTop"><img src="img/uparrow.png" alt=""></button>
 
     </div>
     
