--- a/404.html
+++ b/404.html
@@ -3,60 +3,128 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found</title>
+  <title>Page Not Found | IIUM Aikido Club</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="icon.png">
   <style>
     * {
-      line-height: 1.2;
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
     }
 
     html {
-      color: #888;
-      display: table;
-      font-family: sans-serif;
       height: 100%;
-      text-align: center;
-      width: 100%;
     }
 
     body {
-      display: table-cell;
-      vertical-align: middle;
-      margin: 2em auto;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: linear-gradient(135deg, #f5f5f5 0%, #e0e0e0 100%);
+      min-height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 500px;
+    }
+
+    .logo {
+      width: 80px;
+      height: auto;
+      margin-bottom: 30px;
+      opacity: 0.8;
+    }
+
+    .error-code {
+      font-size: 8rem;
+      font-weight: 700;
+      color: rgb(177, 112, 112);
+      line-height: 1;
+      margin-bottom: 10px;
     }
 
     h1 {
-      color: #555;
-      font-size: 2em;
-      font-weight: 400;
+      color: #333;
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin-bottom: 15px;
     }
 
     p {
-      margin: 0 auto;
-      width: 280px;
+      color: #666;
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 30px;
     }
 
-    @media only screen and (max-width: 280px) {
+    .btn {
+      display: inline-block;
+      padding: 12px 30px;
+      background: rgb(177, 112, 112);
+      color: white;
+      text-decoration: none;
+      border-radius: 25px;
+      font-weight: 500;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
 
-      body,
-      p {
-        width: 95%;
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 20px rgba(177, 112, 112, 0.4);
+    }
+
+    .links {
+      margin-top: 40px;
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .links a {
+      color: #888;
+      text-decoration: none;
+      font-size: 0.9rem;
+      transition: color 0.2s;
+    }
+
+    .links a:hover {
+      color: rgb(177, 112, 112);
+    }
+
+    @media (max-width: 480px) {
+      .error-code {
+        font-size: 5rem;
       }
 
       h1 {
-        font-size: 1.5em;
-        margin: 0 0 0.3em;
+        font-size: 1.2rem;
       }
-
     }
   </style>
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+  <div class="container">
+    <img src="img/aikido-logo.png" alt="IIUM Aikido Club" class="logo">
+    <div class="error-code">404</div>
+    <h1>Oops! Page Not Found</h1>
+    <p>The page you're looking for doesn't exist or has been moved. Don't worry, even the best Aikidoka sometimes lose
+      their way!</p>
+    <a href="index.html" class="btn">Return to Home</a>
+    <div class="links">
+      <a href="activities.html">Activities</a>
+      <a href="about-us.html">About Us</a>
+      <a href="news.html">News</a>
+    </div>
+  </div>
 </body>
 
 </html>
-<!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
