--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta property="og:image" content="img/aikido-logo.png">
+  <meta property="og:image:alt" content="IIUM Aikido Club Logo">
   <title>Home | IIUM Aikido Club</title>
 
+  <!-- Add favicons -->
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#fafafa">
 
-  <!-- Add favicons. Based on favicon website. Put icon at the browser tab -->
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
-  <link rel="manifest" href="img/favicon_io/site.webmanifest">
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/image-deco.css">
@@ -156,7 +160,9 @@
         <h1>Become our member!</h1>
       </div>
       <div class="join-txt2">
+        <span class="free-trial-badge">🥋 First Class FREE!</span>
         <h1>Join Us Now!</h1>
+        <p class="join-subtext">No experience needed. Just show up!</p>
         <a href="https://forms.gle/hRwYhA1K96wzq28f6" target="_blank" rel="noopener noreferrer"><button>Fill in
             Registration Form</button></a>
       </div>
@@ -178,6 +184,12 @@
         <a href="https://www.youtube.com/@aikidoiium9560" target="_blank"
           rel="noopener noreferrer"><!-- Add club youtube link and icon (display in new tab)-->
           <img class="socmed-logo" src="img/youtube.png" alt="youtube icon">
+        </a>
+        <a href="#whatsapp-link" target="_blank" rel="noopener noreferrer" aria-label="Join our WhatsApp group">
+          <svg class="socmed-logo whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
+            <path
+              d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z" />
+          </svg>
         </a>
       </div>
       <div id="contact"><!-- Add club contact email-->
