Refactor code structure for improved readability and maintainability

--- a/404.html
+++ b/404.html
@@ -113,7 +113,7 @@
 
 <body>
   <div class="container">
-    <img src="img/aikido-logo.png" alt="IIUM Aikido Club" class="logo">
+    <img src="img/aikido-logo.png" alt="IIUM Aikido Club" class="logo" width="120" height="122">
     <div class="error-code">404</div>
     <h1>Oops! Page Not Found</h1>
     <p>The page you're looking for doesn't exist or has been moved. Don't worry, even the best Aikidoka sometimes lose
