--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,7 @@
     content="Learn about IIUM Aikido Club - Our community, objectives, and testimonials from members. Join our supportive martial arts family.">
   <meta property="og:title" content="About Us | IIUM Aikido Club">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://2217441.github.io/AikidoClub/about-us.html">
   <meta property="og:image" content="img/aikido-logo.png">
   <meta property="og:image:alt" content="IIUM Aikido Club Logo">
   <title>About Us | IIUM Aikido Club</title>
@@ -44,7 +45,7 @@
     <div class="nav-wrapper">
       <div class="grad-bar"></div>
       <nav class="navbar">
-        <img src="img/aikido-logo.png" alt="Aikido-Logo">
+        <img src="img/aikido-logo.png" alt="Aikido-Logo" width="54" height="55">
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -291,15 +292,15 @@
         <p>Follow us:</p>
         <a href="https://instagram.com/iiumaikidoclub" target="_blank"
           rel="noopener noreferrer"><!-- Add club instagram link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/instagram.png" alt="instagram icon">
+          <img class="socmed-logo" src="img/instagram.png" alt="instagram icon" width="50" height="50">
         </a>
         <a href="https://www.facebook.com/iiumaikidoclub/" target="_blank"
           rel="noopener noreferrer"><!-- Add club facebook link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/facebook.png" alt="fb icon">
+          <img class="socmed-logo" src="img/facebook.png" alt="fb icon" width="50" height="50">
         </a>
         <a href="https://www.youtube.com/@aikidoiium9560" target="_blank"
           rel="noopener noreferrer"><!-- Add club youtube link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/youtube.png" alt="youtube icon">
+          <img class="socmed-logo" src="img/youtube.png" alt="youtube icon" width="50" height="50">
         </a>
         <a href="#whatsapp-link" target="_blank" rel="noopener noreferrer" aria-label="Join our WhatsApp group">
           <svg class="socmed-logo whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
