--- a/mainboard.html
+++ b/mainboard.html
@@ -8,7 +8,7 @@
     content="Meet the IIUM Aikido Club mainboard - View our organizational charts and leadership team across different tenures.">
   <meta property="og:title" content="Mainboard | IIUM Aikido Club">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="https://2217441.github.io/AikidoClub/mainboard.html">
   <meta property="og:image" content="img/aikido-logo.png">
   <meta property="og:image:alt" content="IIUM Aikido Club Logo">
   <title>Mainboard | IIUM Aikido Club</title>
@@ -43,7 +43,7 @@
     <div class="nav-wrapper">
       <div class="grad-bar"></div>
       <nav class="navbar">
-        <img src="img/aikido-logo.png" alt="Aikido-Logo">
+        <img src="img/aikido-logo.png" alt="Aikido-Logo" width="54" height="55">
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -94,9 +94,9 @@
         <!-- Column for Aikido Club Mainboard Tenure 23/24 -->
         <div class="chartt-col">
           <h1>Aikido Club Mainboard Tenure 23/24</h1> <!-- Heading for Tenure 23/24 -->
-          <a href="img/mainboard/CHART NEW TENURE 2023  2024-1.png" target="_blank" rel="noopener noreferrer"
+          <a href="img/mainboard/org-chart.webp" target="_blank" rel="noopener noreferrer"
             aria-label="View Aikido Club Mainboard Tenure 23/24 organizational chart">
-            <img src="img/mainboard/ORG CHART NEW TENURE 2023  2024-1.png" alt="Aikido chart">
+            <img src="img/mainboard/org-chart.webp" alt="Aikido chart">
             <!-- Image for Tenure 23/24 -->
           </a>
         </div>
@@ -127,15 +127,15 @@
         <p>Follow us:</p>
         <a href="https://instagram.com/iiumaikidoclub" target="_blank"
           rel="noopener noreferrer"><!-- Add club instagram link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/instagram.png" alt="instagram icon">
+          <img class="socmed-logo" src="img/instagram.png" alt="instagram icon" width="50" height="50">
         </a>
         <a href="https://www.facebook.com/iiumaikidoclub/" target="_blank"
           rel="noopener noreferrer"><!-- Add club facebook link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/facebook.png" alt="fb icon">
+          <img class="socmed-logo" src="img/facebook.png" alt="fb icon" width="50" height="50">
         </a>
         <a href="https://www.youtube.com/@aikidoiium9560" target="_blank"
           rel="noopener noreferrer"><!-- Add club youtube link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/youtube.png" alt="youtube icon">
+          <img class="socmed-logo" src="img/youtube.png" alt="youtube icon" width="50" height="50">
         </a>
         <a href="#whatsapp-link" target="_blank" rel="noopener noreferrer" aria-label="Join our WhatsApp group">
           <svg class="socmed-logo whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
