--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="IIUM Aikido Club - Join our martial arts community at International Islamic University Malaysia. Learn Aikido, build friendships, and develop discipline.">
   <meta property="og:title" content="IIUM Aikido Club - Home">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="https://2217441.github.io/AikidoClub/">
   <meta property="og:image" content="img/aikido-logo.png">
   <meta property="og:image:alt" content="IIUM Aikido Club Logo">
   <title>Home | IIUM Aikido Club</title>
@@ -43,7 +43,7 @@
     <div class="nav-wrapper">
       <div class="grad-bar"></div>
       <nav class="navbar">
-        <img src="img/aikido-logo.png" alt="Aikido-Logo">
+        <img src="img/aikido-logo.png" alt="Aikido-Logo" width="54" height="55">
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -175,15 +175,15 @@
         <p>Follow us:</p>
         <a href="https://instagram.com/iiumaikidoclub" target="_blank"
           rel="noopener noreferrer"><!-- Add club instagram link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/instagram.png" alt="instagram icon">
+          <img class="socmed-logo" src="img/instagram.png" alt="instagram icon" width="50" height="50">
         </a>
         <a href="https://www.facebook.com/iiumaikidoclub/" target="_blank"
           rel="noopener noreferrer"><!-- Add club facebook link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/facebook.png" alt="fb icon">
+          <img class="socmed-logo" src="img/facebook.png" alt="fb icon" width="50" height="50">
         </a>
         <a href="https://www.youtube.com/@aikidoiium9560" target="_blank"
           rel="noopener noreferrer"><!-- Add club youtube link and icon (display in new tab)-->
-          <img class="socmed-logo" src="img/youtube.png" alt="youtube icon">
+          <img class="socmed-logo" src="img/youtube.png" alt="youtube icon" width="50" height="50">
         </a>
         <a href="#whatsapp-link" target="_blank" rel="noopener noreferrer" aria-label="Join our WhatsApp group">
           <svg class="socmed-logo whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
