fix: UI audit - add accent colors, fix image paths, update PWA manifest, accessibility fixes

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -71,12 +71,14 @@
         <button class="close-btn" onclick="document.getElementById('loginHelp').style.display='none'">&times;</button>
         <h3>📝 How to Login</h3>
         <ol>
-            <li>Go to <a href="https://github.com/settings/tokens?type=beta" target="_blank">GitHub Token Settings</a>
+            <li>Go to <a href="https://github.com/settings/tokens?type=beta" target="_blank"
+                    rel="noopener noreferrer">GitHub Token Settings</a>
             </li>
             <li>Click <strong>"Generate new token"</strong></li>
             <li>Name it <code>Aikido CMS</code>, set expiry (90 days recommended)</li>
             <li>Under <strong>Repository access</strong>, select <strong>"Only select repositories"</strong> → choose
-                <strong>AikidoClub</strong></li>
+                <strong>AikidoClub</strong>
+            </li>
             <li>Under <strong>Permissions</strong> → <strong>Repository permissions</strong>:
                 <br>• <strong>Contents</strong>: Read and write
                 <br>• <strong>Metadata</strong>: Read-only
